--- a/plugins/MyAmp/Makefile
+++ b/plugins/MyAmp/Makefile
@@ -1,20 +1,37 @@
 #!/usr/bin/make -f
+# Makefile for DISTRHO Plugins #
+# ---------------------------- #
+# Created by falkTX
+#
+# Modified by REIS0
 
 VST2 ?= true
 LV2 ?= true
 
+# --------------------------------------------------------------
+# Project name, used for binaries
+
 NAME = MyAmp
+
+# --------------------------------------------------------------
+# Files to build
 
 FILES_DSP = MyAmp.cpp
 
+# --------------------------------------------------------------
+# Do some magic
+
 include ../../dpf/Makefile.plugins.mk
+
+# --------------------------------------------------------------
+# VST2 and LV2 targets
 
 ifeq ($(VST2), true)
 TARGETS += vst
 endif
 
 ifeq ($(LV2), true)
-ifeq ($(HAVE_DGL), true)
+ifeq ($(HAVE_DGL),true)
 TARGETS += lv2_sep
 else
 TARGETS += lv2_dsp
@@ -22,3 +39,5 @@ endif
 endif
 
 all: $(TARGETS)
+
+# --------------------------------------------------------------
